--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -4,4 +4,15 @@
   bottom: 0;
   width: 100%;
   text-align: center;
+  background-color: #FCFCFC;
+}
+
+.page-mobile {
+  width: 100%;
+  height: 100%;
+}
+
+.page-content {
+  width: 100%;
+  height: calc(100% - 56px);
 }
