--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -16,3 +16,13 @@
   transform: translate(-50%, -50%);
   color: white;
 }
+
+.input-field {
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  text-align: center;
+}
