--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -1,28 +1,48 @@
 .loading-page {
-  background-color: #2a5fdf;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 2;
 }
 
 .app-name {
-  font-family: 'Berkshire Swash';
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  color: white;
+  color: #2a5fdf;
+  font-size: 40px;
+}
+
+#app-title {
+  font-family: 'Berkshire Swash';
+  color: #242250;
 }
 
 .input-field {
   width: 100px;
   height: 50px;
-  border-radius: 10px;
-  border: none;
+  border: 1px solid gray;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   text-align: center;
+  font-size: 16px;
+}
+
+.zip-info {
+  font-size: 20px;
+  padding: 20px;
+}
+
+.get-started-button {
+  font-size: 18px;
+  padding: 15px;
+  margin: 50px 0;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #2a5fdf;
+  border: none;
+  color: white;
 }
