Add Room and Roommate tabs

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -12,7 +12,7 @@
   bottom: 0;
   width: 100%;
   text-align: center;
-  background-color: #FCFCFC;
+  background-color: #fcfcfc;
 }
 
 .page-mobile {
@@ -23,7 +23,7 @@
 .page-content {
   width: 100%;
   position: fixed;
-  top: 56px;
+  top: 107px;
   bottom: 56px;
   left: 0px;
   width: 100%;
