--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: black;
-  font-family: 'Roboto';
+  font-family: 'Helvetica Neue';
 }
-
